// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ConstellationLegend — colorMode snapshot matrix renders the 3-person fixture in colorMode=dark 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#120C07",
        "borderColor": "rgba(255,255,255,0.08)",
        "borderRadius": 18,
        "borderWidth": 0.5,
        "paddingHorizontal": 18,
        "paddingVertical": 14,
      },
      undefined,
    ]
  }
  testID="legend"
>
  <View
    accessibilityLabel="Marian, Mom, In their usual range, A calm morning."
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
          "paddingVertical": 8,
        },
        null,
      ]
    }
    testID="legend-row-marian"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "backgroundColor": "#FF7350",
            "borderRadius": 4,
            "flexShrink": 0,
            "height": 8,
            "opacity": 1,
            "width": 8,
          },
          {
            "elevation": 0,
            "shadowColor": "#FF7350",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.85,
            "shadowRadius": 4,
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
          "minWidth": 0,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "InstrumentSerif_400Regular",
              "fontSize": 15,
              "letterSpacing": -0.075,
              "lineHeight": 18,
            }
          }
        >
          Marian
        </Text>
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#857F7A",
              "fontFamily": "JetBrainsMono_500Medium",
              "fontSize": 9,
              "letterSpacing": 0.9,
              "lineHeight": 12,
              "textTransform": "uppercase",
            }
          }
        >
          · Mom
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        maxFontSizeMultiplier={1.3}
        numberOfLines={2}
        style={
          {
            "color": "#B8B2AA",
            "fontFamily": "Inter_400Regular",
            "fontSize": 11.5,
            "lineHeight": 16,
            "marginTop": 2,
          }
        }
      >
        A calm morning.
      </Text>
    </View>
    <View
      accessibilityLabel="In their usual range"
      accessibilityRole="text"
      accessible={true}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#5FA97E24",
            "borderColor": "#5FA97E59",
            "borderRadius": 99,
            "borderWidth": 0.5,
            "flexDirection": "row",
            "gap": 5,
            "paddingLeft": 7,
            "paddingRight": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#5FA97E",
              "borderRadius": 99,
              "height": 5,
              "width": 5,
            },
            {
              "elevation": 0,
              "shadowColor": "#5FA97E",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.6,
              "shadowRadius": 4,
            },
          ]
        }
      />
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          {
            "color": "#5FA97E",
            "fontFamily": "Inter_500Medium",
            "fontSize": 11,
            "letterSpacing": 0.2,
            "lineHeight": 14,
          }
        }
      >
        In their usual range
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Emeka, Dad, Needs attention, BP is trending up."
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderTopColor": "rgba(255,255,255,0.08)",
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "gap": 12,
          "paddingVertical": 8,
        },
        null,
      ]
    }
    testID="legend-row-emeka"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "backgroundColor": "#F2A618",
            "borderRadius": 4,
            "flexShrink": 0,
            "height": 8,
            "opacity": 1,
            "width": 8,
          },
          {
            "elevation": 0,
            "shadowColor": "#F2A618",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.85,
            "shadowRadius": 4,
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
          "minWidth": 0,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "InstrumentSerif_400Regular",
              "fontSize": 15,
              "letterSpacing": -0.075,
              "lineHeight": 18,
            }
          }
        >
          Emeka
        </Text>
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#857F7A",
              "fontFamily": "JetBrainsMono_500Medium",
              "fontSize": 9,
              "letterSpacing": 0.9,
              "lineHeight": 12,
              "textTransform": "uppercase",
            }
          }
        >
          · Dad
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        maxFontSizeMultiplier={1.3}
        numberOfLines={2}
        style={
          {
            "color": "#B8B2AA",
            "fontFamily": "Inter_400Regular",
            "fontSize": 11.5,
            "lineHeight": 16,
            "marginTop": 2,
          }
        }
      >
        BP is trending up.
      </Text>
    </View>
    <View
      accessibilityLabel="Needs attention"
      accessibilityRole="text"
      accessible={true}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#E8B54F24",
            "borderColor": "#E8B54F59",
            "borderRadius": 99,
            "borderWidth": 0.5,
            "flexDirection": "row",
            "gap": 5,
            "paddingLeft": 7,
            "paddingRight": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#E8B54F",
              "borderRadius": 99,
              "height": 5,
              "width": 5,
            },
            {
              "elevation": 0,
              "shadowColor": "#E8B54F",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.6,
              "shadowRadius": 4,
            },
          ]
        }
      />
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          {
            "color": "#E8B54F",
            "fontFamily": "Inter_500Medium",
            "fontSize": 11,
            "letterSpacing": 0.2,
            "lineHeight": 14,
          }
        }
      >
        Needs attention
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Joy, Aunt, Sleeping, Resting since 11pm."
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderTopColor": "rgba(255,255,255,0.08)",
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "gap": 12,
          "paddingVertical": 8,
        },
        null,
      ]
    }
    testID="legend-row-joy"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "backgroundColor": "#7B67CC",
            "borderRadius": 4,
            "flexShrink": 0,
            "height": 8,
            "opacity": 0.5,
            "width": 8,
          },
          null,
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
          "minWidth": 0,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "InstrumentSerif_400Regular",
              "fontSize": 15,
              "letterSpacing": -0.075,
              "lineHeight": 18,
            }
          }
        >
          Joy
        </Text>
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#857F7A",
              "fontFamily": "JetBrainsMono_500Medium",
              "fontSize": 9,
              "letterSpacing": 0.9,
              "lineHeight": 12,
              "textTransform": "uppercase",
            }
          }
        >
          · Aunt
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        maxFontSizeMultiplier={1.3}
        numberOfLines={2}
        style={
          {
            "color": "#B8B2AA",
            "fontFamily": "Inter_400Regular",
            "fontSize": 11.5,
            "lineHeight": 16,
            "marginTop": 2,
          }
        }
      >
        Resting since 11pm.
      </Text>
    </View>
    <View
      accessibilityLabel="Sleeping"
      accessibilityRole="text"
      accessible={true}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#8F7FD424",
            "borderColor": "#8F7FD459",
            "borderRadius": 99,
            "borderWidth": 0.5,
            "flexDirection": "row",
            "gap": 5,
            "paddingLeft": 7,
            "paddingRight": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#8F7FD4",
              "borderRadius": 99,
              "height": 5,
              "width": 5,
            },
            null,
          ]
        }
      />
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          {
            "color": "#8F7FD4",
            "fontFamily": "Inter_500Medium",
            "fontSize": 11,
            "letterSpacing": 0.2,
            "lineHeight": 14,
          }
        }
      >
        Sleeping
      </Text>
    </View>
  </View>
</View>
`;

exports[`ConstellationLegend — colorMode snapshot matrix renders the 3-person fixture in colorMode=light 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#120C07",
        "borderColor": "rgba(15,18,28,0.08)",
        "borderRadius": 18,
        "borderWidth": 0.5,
        "paddingHorizontal": 18,
        "paddingVertical": 14,
      },
      undefined,
    ]
  }
  testID="legend"
>
  <View
    accessibilityLabel="Marian, Mom, In their usual range, A calm morning."
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
          "paddingVertical": 8,
        },
        null,
      ]
    }
    testID="legend-row-marian"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "backgroundColor": "#FF7350",
            "borderRadius": 4,
            "flexShrink": 0,
            "height": 8,
            "opacity": 1,
            "width": 8,
          },
          {
            "elevation": 0,
            "shadowColor": "#FF7350",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.85,
            "shadowRadius": 4,
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
          "minWidth": 0,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#0F121C",
              "fontFamily": "InstrumentSerif_400Regular",
              "fontSize": 15,
              "letterSpacing": -0.075,
              "lineHeight": 18,
            }
          }
        >
          Marian
        </Text>
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#5A6478",
              "fontFamily": "JetBrainsMono_500Medium",
              "fontSize": 9,
              "letterSpacing": 0.9,
              "lineHeight": 12,
              "textTransform": "uppercase",
            }
          }
        >
          · Mom
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        maxFontSizeMultiplier={1.3}
        numberOfLines={2}
        style={
          {
            "color": "#2A3040",
            "fontFamily": "Inter_400Regular",
            "fontSize": 11.5,
            "lineHeight": 16,
            "marginTop": 2,
          }
        }
      >
        A calm morning.
      </Text>
    </View>
    <View
      accessibilityLabel="In their usual range"
      accessibilityRole="text"
      accessible={true}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#5FA97E24",
            "borderColor": "#5FA97E59",
            "borderRadius": 99,
            "borderWidth": 0.5,
            "flexDirection": "row",
            "gap": 5,
            "paddingLeft": 7,
            "paddingRight": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#5FA97E",
              "borderRadius": 99,
              "height": 5,
              "width": 5,
            },
            {
              "elevation": 0,
              "shadowColor": "#5FA97E",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.6,
              "shadowRadius": 4,
            },
          ]
        }
      />
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          {
            "color": "#5FA97E",
            "fontFamily": "Inter_500Medium",
            "fontSize": 11,
            "letterSpacing": 0.2,
            "lineHeight": 14,
          }
        }
      >
        In their usual range
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Emeka, Dad, Needs attention, BP is trending up."
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderTopColor": "rgba(15,18,28,0.08)",
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "gap": 12,
          "paddingVertical": 8,
        },
        null,
      ]
    }
    testID="legend-row-emeka"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "backgroundColor": "#F2A618",
            "borderRadius": 4,
            "flexShrink": 0,
            "height": 8,
            "opacity": 1,
            "width": 8,
          },
          {
            "elevation": 0,
            "shadowColor": "#F2A618",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.85,
            "shadowRadius": 4,
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
          "minWidth": 0,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#0F121C",
              "fontFamily": "InstrumentSerif_400Regular",
              "fontSize": 15,
              "letterSpacing": -0.075,
              "lineHeight": 18,
            }
          }
        >
          Emeka
        </Text>
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#5A6478",
              "fontFamily": "JetBrainsMono_500Medium",
              "fontSize": 9,
              "letterSpacing": 0.9,
              "lineHeight": 12,
              "textTransform": "uppercase",
            }
          }
        >
          · Dad
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        maxFontSizeMultiplier={1.3}
        numberOfLines={2}
        style={
          {
            "color": "#2A3040",
            "fontFamily": "Inter_400Regular",
            "fontSize": 11.5,
            "lineHeight": 16,
            "marginTop": 2,
          }
        }
      >
        BP is trending up.
      </Text>
    </View>
    <View
      accessibilityLabel="Needs attention"
      accessibilityRole="text"
      accessible={true}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#E8B54F24",
            "borderColor": "#E8B54F59",
            "borderRadius": 99,
            "borderWidth": 0.5,
            "flexDirection": "row",
            "gap": 5,
            "paddingLeft": 7,
            "paddingRight": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#E8B54F",
              "borderRadius": 99,
              "height": 5,
              "width": 5,
            },
            {
              "elevation": 0,
              "shadowColor": "#E8B54F",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0.6,
              "shadowRadius": 4,
            },
          ]
        }
      />
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          {
            "color": "#E8B54F",
            "fontFamily": "Inter_500Medium",
            "fontSize": 11,
            "letterSpacing": 0.2,
            "lineHeight": 14,
          }
        }
      >
        Needs attention
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Joy, Aunt, Sleeping, Resting since 11pm."
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderTopColor": "rgba(15,18,28,0.08)",
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "gap": 12,
          "paddingVertical": 8,
        },
        null,
      ]
    }
    testID="legend-row-joy"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "backgroundColor": "#7B67CC",
            "borderRadius": 4,
            "flexShrink": 0,
            "height": 8,
            "opacity": 0.5,
            "width": 8,
          },
          null,
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
          "minWidth": 0,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#0F121C",
              "fontFamily": "InstrumentSerif_400Regular",
              "fontSize": 15,
              "letterSpacing": -0.075,
              "lineHeight": 18,
            }
          }
        >
          Joy
        </Text>
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            {
              "color": "#5A6478",
              "fontFamily": "JetBrainsMono_500Medium",
              "fontSize": 9,
              "letterSpacing": 0.9,
              "lineHeight": 12,
              "textTransform": "uppercase",
            }
          }
        >
          · Aunt
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        maxFontSizeMultiplier={1.3}
        numberOfLines={2}
        style={
          {
            "color": "#2A3040",
            "fontFamily": "Inter_400Regular",
            "fontSize": 11.5,
            "lineHeight": 16,
            "marginTop": 2,
          }
        }
      >
        Resting since 11pm.
      </Text>
    </View>
    <View
      accessibilityLabel="Sleeping"
      accessibilityRole="text"
      accessible={true}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#8F7FD424",
            "borderColor": "#8F7FD459",
            "borderRadius": 99,
            "borderWidth": 0.5,
            "flexDirection": "row",
            "gap": 5,
            "paddingLeft": 7,
            "paddingRight": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#8F7FD4",
              "borderRadius": 99,
              "height": 5,
              "width": 5,
            },
            null,
          ]
        }
      />
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          {
            "color": "#8F7FD4",
            "fontFamily": "Inter_500Medium",
            "fontSize": 11,
            "letterSpacing": 0.2,
            "lineHeight": 14,
          }
        }
      >
        Sleeping
      </Text>
    </View>
  </View>
</View>
`;
